<resources>
    <string name="app_name">Chef 101</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    Author Info    -->
    <string name="author_name">Dylan Shawol</string>
    <string name="author_email">dylan.shawol01@stclairconnect.ca</string>

    <!--    Menu Headers-->
    <string name="menu_home">Home</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_credits">Credits</string>

    <!--    Titles    -->
    <string name="contact_title">Contact Us</string>
    <string name="recipes_title">Recipes</string>
    <string name="converter_title">Converter</string>
    <string name="tips_title">Tips &amp; Tricks</string>
    <string name="mass_title">Mass</string>
    <string name="volume_title">Volume</string>
    <string name="choose_a_unit_title">Choose a Unit</string>

    <!--    Home Button Text    -->
    <string name="button_recipes">Recipes</string>
    <string name="button_converter">Converter</string>
    <string name="button_tips">Tips &amp; Tricks</string>

    <!--    Contact Button Text    -->
    <string name="contact_call_us">Call Us</string>
    <string name="contact_text_us">Text Us</string>
    <string name="contact_email_us">Email Us</string>
    <string name="contact_visit_us">Visit Us</string>


    <!--    Recipe Button Text    -->
    <string name="ingredients_button">Ingredients</string>
    <string name="instructions_button">Instructions</string>

    <!--    Timer Button    -->
    <string name="timer_button_text">Set Timer</string>

    <!--    Mass Units Array    -->
    <string-array name="mass_units">
        <item>g</item>              <!-- 0 -->
        <item>teaspoon</item>       <!-- 1 -->
        <item>tablespoon</item>     <!-- 2 -->
        <item>oz</item>             <!-- 3 -->
        <item>lb</item>             <!-- 4 -->
        <item>kg</item>             <!-- 5 -->
    </string-array>

    <!--    Volume Units Array    -->
    <string-array name="volume_units">
        <item>cup</item>            <!-- 0 -->
        <item>teaspoon</item>       <!-- 1 -->
        <item>tablespoon</item>     <!-- 2 -->
        <item>fl oz</item>          <!-- 3 -->
        <item>L</item>              <!-- 4 -->
        <item>ml</item>             <!-- 5 -->
    </string-array>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>